--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,8 @@
-# Compiler files
-cache/
-out/
-
-# Ignores development broadcast logs
-!/broadcast
-/broadcast/*/31337/
-/broadcast/**/dry-run/
-
-# Dotenv file
+# Environment
 .env
+
+# macOS
+.DS_Store
+
+# Worktrees
+.conductor/
