fix: use upgrades-path for fallback to fix path resolution
The previous fallback path '$BASELINE/../previous' fails when the
baseline directory doesn't exist because '../' can't resolve through
a non-existent directory. Using '$upgrades-path/previous' directly
avoids this issue.

--- a/.github/workflows/_foundry-cicd.yml
+++ b/.github/workflows/_foundry-cicd.yml
@@ -115,7 +115,8 @@ jobs:
           forge clean && forge build
 
           BASELINE="${{ inputs.baseline-path }}"
-          FALLBACK="${{ inputs.baseline-path }}/../previous"
+          # Use upgrades-path for fallback to avoid path resolution issues when baseline dir doesn't exist
+          FALLBACK="${{ inputs.upgrades-path }}/previous"
 
           if [ -d "$BASELINE" ] && ls ${BASELINE}/*.sol 1> /dev/null 2>&1; then
             echo "Baseline contracts found in $BASELINE, running upgrade validation..."
