fix: allow baseline init even when deploy-on-main is disabled
flatten-snapshots now runs on push to main when:
- deploy-mainnet succeeds (normal post-deploy flattening)
- deploy-mainnet is skipped (baseline init without deployment)

This enables repos to establish their initial baseline without
requiring mainnet deployment to be enabled.

--- a/.github/workflows/_foundry-cicd.yml
+++ b/.github/workflows/_foundry-cicd.yml
@@ -433,11 +433,15 @@ jobs:
   flatten-snapshots:
     name: Flatten Snapshots
     runs-on: ubuntu-latest
-    needs: [deploy-mainnet]
+    needs: [ci, upgrade-safety, deploy-mainnet]
     if: |
       always() &&
-      needs.deploy-mainnet.result == 'success' &&
-      inputs.flatten-contracts
+      needs.ci.result == 'success' &&
+      (needs.upgrade-safety.result == 'success' || needs.upgrade-safety.result == 'skipped') &&
+      (needs.deploy-mainnet.result == 'success' || needs.deploy-mainnet.result == 'skipped') &&
+      inputs.flatten-contracts &&
+      github.event_name == 'push' &&
+      github.ref == 'refs/heads/main'
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
