feat: add GitHub releases for testnet/mainnet deployments
Mainnet deployments (on merge to main):
- Creates GitHub Release with tag 'mainnet-{sha}'
- Includes contract addresses, Blockscout links, tx hashes
- Attaches flattened contract sources as assets
- Includes commit details (message, author)

Testnet deployments (on PRs):
- Posts deployment info as PR comment
- Creates GitHub Pre-release with tag 'testnet-{sha}'
- Includes PR reference and commit info

New inputs:
- create-release: boolean (default: true)
- release-prefix: string for custom tag prefixes

--- a/.github/workflows/_foundry-cicd.yml
+++ b/.github/workflows/_foundry-cicd.yml
@@ -59,6 +59,16 @@ on:
         type: string
         default: 'test/upgrades'
 
+      # Release Options
+      create-release:
+        description: 'Create GitHub release after deployment'
+        type: boolean
+        default: true
+      release-prefix:
+        description: 'Prefix for release tags (e.g., "v" for v1.0.0 style)'
+        type: string
+        default: ''
+
     secrets:
       PRIVATE_KEY:
         description: 'Deployer wallet private key'
@@ -311,6 +321,108 @@ jobs:
             echo "| $CONTRACT | \`$ADDRESS\` | [View](${BLOCKSCOUT_URL}/address/$ADDRESS) |" >> $GITHUB_STEP_SUMMARY
           done < deployment-summary.txt
 
+      - name: Comment on PR with deployment info
+        if: github.event_name == 'pull_request'
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN || github.token }}
+          BLOCKSCOUT_URL: ${{ steps.network.outputs.blockscout_url }}
+          NETWORK_NAME: ${{ steps.network.outputs.network_name }}
+        run: |
+          set -euo pipefail
+
+          SHORT_SHA="${{ github.event.pull_request.head.sha }}"
+          SHORT_SHA="${SHORT_SHA:0:7}"
+          BROADCAST_FILE="${{ steps.parse.outputs.broadcast_file }}"
+
+          # Build comment body
+          cat > pr-comment.md << EOF
+          ## 🚀 Testnet Deployment
+
+          **Network:** ${NETWORK_NAME}
+          **Commit:** \`${SHORT_SHA}\`
+
+          ### Deployed Contracts
+
+          | Contract | Address | Explorer |
+          |----------|---------|----------|
+          EOF
+
+          # Add contract rows
+          while read -r line; do
+            CONTRACT=$(echo "$line" | cut -d: -f1)
+            ADDRESS=$(echo "$line" | cut -d: -f2 | tr -d ' ')
+            echo "| ${CONTRACT} | \`${ADDRESS}\` | [View](${BLOCKSCOUT_URL}/address/${ADDRESS}) |" >> pr-comment.md
+          done < deployment-summary.txt
+
+          # Add transaction links
+          echo "" >> pr-comment.md
+          echo "<details>" >> pr-comment.md
+          echo "<summary>Deployment Transactions</summary>" >> pr-comment.md
+          echo "" >> pr-comment.md
+          echo "| Contract | Transaction |" >> pr-comment.md
+          echo "|----------|-------------|" >> pr-comment.md
+          jq -r '.transactions[] | select(.transactionType == "CREATE") | "| \(.contractName) | [\(.hash)]('"${BLOCKSCOUT_URL}"'/tx/\(.hash)) |"' "$BROADCAST_FILE" >> pr-comment.md
+          echo "" >> pr-comment.md
+          echo "</details>" >> pr-comment.md
+
+          # Post comment to PR
+          gh pr comment ${{ github.event.pull_request.number }} --body-file pr-comment.md
+
+      - name: Create testnet pre-release
+        if: inputs.create-release && github.event_name == 'pull_request'
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN || github.token }}
+          BLOCKSCOUT_URL: ${{ steps.network.outputs.blockscout_url }}
+          NETWORK_NAME: ${{ steps.network.outputs.network_name }}
+        run: |
+          set -euo pipefail
+
+          SHORT_SHA="${{ github.event.pull_request.head.sha }}"
+          SHORT_SHA="${SHORT_SHA:0:7}"
+          TAG="${{ inputs.release-prefix }}testnet-${SHORT_SHA}"
+          BROADCAST_FILE="${{ steps.parse.outputs.broadcast_file }}"
+          DATE=$(date -u +"%Y-%m-%d %H:%M UTC")
+          PR_NUM="${{ github.event.pull_request.number }}"
+          PR_TITLE="${{ github.event.pull_request.title }}"
+
+          # Build release body
+          cat > release-notes.md << EOF
+          ## Testnet Deployment
+
+          **Network:** ${NETWORK_NAME}
+          **Date:** ${DATE}
+          **PR:** [#${PR_NUM}](${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/pull/${PR_NUM}) - ${PR_TITLE}
+          **Commit:** [\`${SHORT_SHA}\`](${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/commit/${{ github.event.pull_request.head.sha }})
+
+          ### Deployed Contracts
+
+          | Contract | Address | Explorer |
+          |----------|---------|----------|
+          EOF
+
+          # Add contract rows
+          while read -r line; do
+            CONTRACT=$(echo "$line" | cut -d: -f1)
+            ADDRESS=$(echo "$line" | cut -d: -f2 | tr -d ' ')
+            echo "| ${CONTRACT} | \`${ADDRESS}\` | [View](${BLOCKSCOUT_URL}/address/${ADDRESS}) |" >> release-notes.md
+          done < deployment-summary.txt
+
+          # Add transaction details
+          echo "" >> release-notes.md
+          echo "### Deployment Transactions" >> release-notes.md
+          echo "" >> release-notes.md
+          echo "| Contract | Transaction |" >> release-notes.md
+          echo "|----------|-------------|" >> release-notes.md
+          jq -r '.transactions[] | select(.transactionType == "CREATE") | "| \(.contractName) | [\(.hash)]('"${BLOCKSCOUT_URL}"'/tx/\(.hash)) |"' "$BROADCAST_FILE" >> release-notes.md
+
+          # Create pre-release
+          gh release create "$TAG" \
+            --title "Testnet Deployment - PR #${PR_NUM}" \
+            --notes-file release-notes.md \
+            --prerelease
+
+          echo "::notice::Created pre-release $TAG"
+
   deploy-mainnet:
     name: Deploy Mainnet
     runs-on: ubuntu-latest
@@ -433,6 +545,76 @@ jobs:
             ADDRESS=$(echo "$line" | cut -d: -f2 | tr -d ' ')
             echo "| $CONTRACT | \`$ADDRESS\` | [View](${BLOCKSCOUT_URL}/address/$ADDRESS) |" >> $GITHUB_STEP_SUMMARY
           done < deployment-summary.txt
+
+      - name: Create GitHub Release
+        if: inputs.create-release
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN || github.token }}
+          BLOCKSCOUT_URL: ${{ steps.network.outputs.blockscout_url }}
+          NETWORK_NAME: ${{ steps.network.outputs.network_name }}
+        run: |
+          set -euo pipefail
+
+          SHORT_SHA="${GITHUB_SHA:0:7}"
+          TAG="${{ inputs.release-prefix }}mainnet-${SHORT_SHA}"
+          BROADCAST_FILE="${{ steps.parse.outputs.broadcast_file }}"
+          DATE=$(date -u +"%Y-%m-%d %H:%M UTC")
+
+          # Build release body
+          cat > release-notes.md << EOF
+          ## Mainnet Deployment
+
+          **Network:** ${NETWORK_NAME}
+          **Date:** ${DATE}
+          **Commit:** [\`${SHORT_SHA}\`](${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/commit/${GITHUB_SHA})
+
+          ### Deployed Contracts
+
+          | Contract | Address | Explorer |
+          |----------|---------|----------|
+          EOF
+
+          # Add contract rows
+          while read -r line; do
+            CONTRACT=$(echo "$line" | cut -d: -f1)
+            ADDRESS=$(echo "$line" | cut -d: -f2 | tr -d ' ')
+            echo "| ${CONTRACT} | \`${ADDRESS}\` | [View](${BLOCKSCOUT_URL}/address/${ADDRESS}) |" >> release-notes.md
+          done < deployment-summary.txt
+
+          # Add transaction details
+          echo "" >> release-notes.md
+          echo "### Deployment Transactions" >> release-notes.md
+          echo "" >> release-notes.md
+          echo "| Contract | Transaction |" >> release-notes.md
+          echo "|----------|-------------|" >> release-notes.md
+
+          jq -r '.transactions[] | select(.transactionType == "CREATE") | "| \(.contractName) | [\(.hash)]('"${BLOCKSCOUT_URL}"'/tx/\(.hash)) |"' "$BROADCAST_FILE" >> release-notes.md
+
+          # Add commit info
+          echo "" >> release-notes.md
+          echo "### Commit Details" >> release-notes.md
+          echo "" >> release-notes.md
+          echo "**Message:** $(git log -1 --pretty=%s)" >> release-notes.md
+          echo "" >> release-notes.md
+          echo "**Author:** $(git log -1 --pretty='%an <%ae>')" >> release-notes.md
+
+          # Collect flattened contracts as assets if they exist
+          ASSETS=""
+          if [[ -d "${{ inputs.upgrades-path }}/current" ]]; then
+            for f in ${{ inputs.upgrades-path }}/current/*.sol; do
+              if [[ -f "$f" ]]; then
+                ASSETS="$ASSETS $f"
+              fi
+            done
+          fi
+
+          # Create release
+          gh release create "$TAG" \
+            --title "Mainnet Deployment - ${DATE}" \
+            --notes-file release-notes.md \
+            $ASSETS
+
+          echo "::notice::Created release $TAG"
 
   flatten-snapshots:
     name: Flatten Snapshots
