feat: add integration testing with example repo submodule
- Add foundry-upgradeable-counter-example as submodule at examples/foundry-counter
- Add working-directory input to all sub-workflows for flexible testing
- Create integration-test.yml that validates workflow changes against the example project
- Pass working-directory through orchestrator to all sub-workflows

Integration tests run automatically when workflow files change, validating
changes before they affect external consumers.

--- a/.github/workflows/_foundry-ci.yml
+++ b/.github/workflows/_foundry-ci.yml
@@ -17,11 +17,18 @@ on:
         description: 'Validate bytecode_hash and cbor_metadata settings'
         type: boolean
         default: true
+      working-directory:
+        description: 'Working directory for Foundry commands'
+        type: string
+        default: '.'
 
 jobs:
   ci:
     name: Build & Test
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ${{ inputs.working-directory }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
