refactor: replace submodule with local testing framework
Changes:
- Remove foundry-counter submodule and integration-test.yml
- Add local test framework in tests/ and scripts/
- Rename workflow titles for clarity:
  - Foundry CI -> Build & Test
  - Foundry CI/CD -> CI/CD Pipeline
  - Deploy -> Deploy & Verify
  - Detect Changes -> Detect Contract Changes
  - Post Mainnet -> Post-Deploy Snapshots
  - Upgrade Safety -> Upgrade Safety Check
- Add test.yml workflow to run tests in CI
- Update README with new testing approach

Testing approach:
- Extract testable logic from workflows into scripts/
- Test against fixtures covering success and failure cases
- Runs locally (./tests/run-all.sh) and in CI

Test coverage:
- Compiler config validation (bytecode_hash, cbor_metadata)
- Baseline detection (primary path, fallback, missing)

--- a/.github/workflows/_foundry-ci.yml
+++ b/.github/workflows/_foundry-ci.yml
@@ -1,6 +1,6 @@
 # Foundry CI - Build, Test, Format Check, Compiler Validation
 # Usage: jobs.<job>.uses: BreadchainCoop/etherform/.github/workflows/_foundry-ci.yml@main
-name: Foundry CI
+name: Build & Test
 
 on:
   workflow_call:
